--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
     </div>
     <div class="input-column">
         <div class="input-container">
-            <input type="number" id="left-input" placeholder="Set score">
+            <input type="number" id="left-input" placeholder="Red score">
             <button onclick="setScore(event, 'left')">Enter</button>
         </div>
         <div class="input-container">
-            <input type="number" id="right-input" placeholder="Set score">
+            <input type="number" id="right-input" placeholder="Blue score">
             <button onclick="setScore(event, 'right')">Enter</button>
         </div>
     </div>
@@ -128,7 +128,7 @@
     <script>
         let leftScore = 0;
         let rightScore = 0;
-        let lastClicked = null;
+        let history = [];
 
         function increment(side) {
             if (side === 'left') {
@@ -138,15 +138,16 @@
                 rightScore++;
                 document.getElementById('right-score').textContent = rightScore;
             }
-            lastClicked = side;
+            history.push({ side: side, leftScore: leftScore, rightScore: rightScore });
         }
 
         function undo() {
-            if (lastClicked === 'left' && leftScore > 0) {
-                leftScore--;
+            if (history.length > 1) {
+                history.pop();
+                const lastState = history[history.length - 1];
+                leftScore = lastState.leftScore;
+                rightScore = lastState.rightScore;
                 document.getElementById('left-score').textContent = leftScore;
-            } else if (lastClicked === 'right' && rightScore > 0) {
-                rightScore--;
                 document.getElementById('right-score').textContent = rightScore;
             }
         }
@@ -154,6 +155,7 @@
         function reset() {
             leftScore = 0;
             rightScore = 0;
+            history = [{ side: null, leftScore: 0, rightScore: 0 }];
             document.getElementById('left-score').textContent = leftScore;
             document.getElementById('right-score').textContent = rightScore;
         }
@@ -167,6 +169,7 @@
                 rightScore = parseInt(document.getElementById('right-input').value) || 0;
                 document.getElementById('right-score').textContent = rightScore;
             }
+            history.push({ side: side, leftScore: leftScore, rightScore: rightScore });
         }
 
         // Prevent input events from propagating to the parent div
@@ -177,6 +180,9 @@
         document.querySelectorAll('.input-container button').forEach(button => {
             button.addEventListener('click', event => event.stopPropagation());
         });
+
+        // Initialize history with initial state
+        history.push({ side: null, leftScore: leftScore, rightScore: rightScore });
     </script>
 </body>
 </html>
